--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -31,11 +31,18 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="@string/cheat_button" />
+
+    <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:drawableRight="@drawable/arrow_right"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="4dp"
         android:text="@string/next_button" />
 
