--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -30,6 +30,12 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/cheat_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left" />
+
     <Button
         android:id="@+id/cheat_button"
         android:layout_width="wrap_content"
