--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -36,6 +36,11 @@
         android:layout_height="wrap_content"
         android:text="@string/cheat_button" />
 
+    <TextView
+        android:id="@+id/cheat_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
